--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1165,6 +1165,18 @@ input, select, textarea {
 			ul.actions.fit.stacked {
 				width: 100%;
 			}
+	@media screen and (max-width: 736px) ul.actions {
+
+		margin-bottom: 10px;
+		display: inline-block;
+			
+		}
+	@media screen and (max-width: 736px) #player {
+
+		width: 100% !important;
+			
+		}
+
 
 /* Icons */
 
@@ -3384,16 +3396,6 @@ input, select, textarea {
 
 	}
 
-	@media screen and (max-width: 736px) ul.actions {
-
-		margin-bottom: 10px;
-			
-		}
-	@media screen and (max-width: 736px) #player {
-
-		width: 100%;
-			
-		}
 
 
 /* Panel (Spotlight) */
