--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1168,14 +1168,10 @@ input, select, textarea {
 	@media screen and (max-width: 736px) ul.actions {
 
 		margin-bottom: 10px;
-		display: inline-block;
+		display: inline-block !important;
 			
 		}
-	@media screen and (max-width: 736px) #player {
 
-		width: 100% !important;
-			
-		}
 
 
 /* Icons */
