--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1166,17 +1166,6 @@ input, select, textarea {
 				width: 100%;
 			}
 
-		@media screen and (max-width: 736px) {
-
-			ul.actions {
-				display: inline-block;
-			}
-			
-			ul.actions li {
-				margin-bottom: 10px;
-			}
-			
-
 /* Icons */
 
 	ul.icons {
@@ -3348,6 +3337,9 @@ input, select, textarea {
 			flex-basis: 60%;
 		}
 
+			.panel.banner .content > .actions:last-child {
+				margin-bottom: 1.5rem;
+			}
 
 		.panel.banner .image {
 			-moz-flex-basis: 40%;
@@ -3390,8 +3382,6 @@ input, select, textarea {
 		}
 
 	}
-
-
 
 /* Panel (Spotlight) */
 
@@ -3662,8 +3652,6 @@ input, select, textarea {
 			height: auto;
 			margin: 0 0 5rem 0;
 			box-shadow: 0 0.25rem 1.5rem 0.25rem rgba(46, 43, 55, 0.5);
-			display: inline-grid;
-
 		}
 
 			#wrapper > .scrollZone {
