Buttons abstände in mobile youtube videos responsive gemacht

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1111,6 +1111,7 @@ input, select, textarea {
 		ul.actions li {
 			padding: 0 0 0 0.75rem;
 			vertical-align: middle;
+			margin-bottom: 0.75rem;
 		}
 
 		ul.actions.special {
@@ -2251,6 +2252,12 @@ input, select, textarea {
 				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.175) 25%, rgba(227, 123, 124, 0.175) 50%, rgba(255, 228, 180, 0.175));
 				background-size: 128px 128px, auto;
 				background-color: #323459;
+			}
+
+			.panel > *.color5 {
+				background-image: url("../../images/VR-Parcours-Bild.jpg");
+				background-size: 1080px 620px, auto;
+			
 			}
 
 		.panel > .intro {
