VR-Parcoursbild angepasst

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2255,8 +2255,8 @@ input, select, textarea {
 			}
 
 			.panel > *.color5 {
-				background-image: url("../../images/VR-Parcours-Bild.jpg");
-				background-size: 1080px 620px, auto;
+				background-image: url("../../images/VR_kleiner.jpg");
+				background-size: 940px 620px, auto;
 			
 			}
 
